# py-dedup

./: .gitignore  README.md  manual_tests.py  pyproject.toml
py_dedup/: __init__.py  cli.py  core.py  helpers.py  persistent_cache.py  utils.py
tests/: global_test_vars.py  test_cli.py  test_config.toml  test_core.py  test_helpers.py  test_persistent_cache.py  utils_tests.py
tests/test_data/cmpr_dir/: common1.txt
tests/test_data/cmpr_dir/common_dir/: changed_file.txt
tests/test_data/copy_of_cmpr_dir/common_dir/: common2.txt
tests/test_data/test_dir/: test_dir_unique_file1
tests/test_data/test_dir/common_dir/: changed_file.txt
tests/test_data/test_dir/test_dir_unique_dir/: test_dir_unique_file2
